--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Ineses 2.majasfarbs</title>
     <link rel="stylesheet" href="styles/layout.css">
 </head>
-<body>
-    
+<body class="container">
+        <div class="header">header</div>
+        <div class="hero">hero</div>
+        <div class="body">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Commodi facere laudantium facilis praesentium fuga? Earum veritatis esse, 
+            quia porro, maxime quas pariatur nemo, eligendi voluptate iste cumque molestias
+             atque molestiae.</div>
+        <div class="advert"></div>
+        <div class="sidebar">sidebar</div>
+        <div class="footer">footer</div>
 </body>
 </html>
