--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body class="container">
-        <div class="header">header</div>
-        <div class="hero">hero</div>
-        <div class="body">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Commodi facere laudantium facilis praesentium fuga? Earum veritatis esse, 
-            quia porro, maxime quas pariatur nemo, eligendi voluptate iste cumque molestias
-             atque molestiae.</div>
-        <div class="advert"></div>
+        <header class="header">
+            <div class="">brand</div>
+            <div class="">global nav</div>
+            <div class="">tools</div>
+        </header>
+        <div class="hero">
+            <div class="">hero feature</div>
+            <div class="">hero call to action</div>
+        </div>
+        <div class="body">
+            <div class="">article feature</div>
+            <div class="">advert</div>
+            <div class="">article listing</div>
+        </div>
+        <div class="advert">advert</div>
         <div class="sidebar">sidebar</div>
-        <div class="footer">footer</div>
+        <footer class="footer">footer</footer>
 </body>
 </html>
