small and medium

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body class="container">
         <header class="header">
-            <div class="">brand</div>
-            <div class="">global nav</div>
-            <div class="">tools</div>
+            <div class="brand">brand</div>
+            <div class="nav">global nav</div>
+            <div class="tools">tools</div>
         </header>
         <div class="hero">
-            <div class="">hero feature</div>
-            <div class="">hero call to action</div>
+            <div class="hero-feature">hero feature</div>
+            <div class="hero-call-to-action">hero call to action</div>
         </div>
         <div class="body">
-            <div class="">article feature</div>
-            <div class="">advert</div>
-            <div class="">article listing</div>
+            <div class="article-features">article feature</div>
+            <div class="inner-advert">advert</div>
+            <div class="article-listing">article listing</div>
         </div>
         <div class="advert">advert</div>
         <div class="sidebar">sidebar</div>
