logo un reklāma

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ineses 2.majasfarbs</title>
+    <title>Ineses 2.majasdarbs</title>
     <link rel="stylesheet" href="styles/layout.css">
+
 </head>
 <body class="container">
         <header class="header">
-            <div class="brand">brand</div>
+            <div class="brand"><img src="tupele.png" alt="Tupelītes logo"></div>
             <div class="nav">global nav</div>
             <div class="tools">tools</div>
         </header>
@@ -19,10 +20,10 @@
         </div>
         <div class="body">
             <div class="article-features">article feature</div>
-            <div class="inner-advert">advert</div>
+            <div class="inner-advert"></div>
             <div class="article-listing">article listing</div>
         </div>
-        <div class="advert">advert</div>
+        <div class="advert"><img src="zabaki.jpg" alt="zābaku reklāma" width="220px"></div>
         <div class="sidebar">sidebar</div>
         <footer class="footer">footer</footer>
 </body>
