--- a/index.html
+++ b/index.html
@@ -5,25 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ineses 2.majasdarbs</title>
-    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/layout2.css">
+    <link rel="stylesheet" href="styles/elementi.css">
 
 </head>
 <body class="container">
         <header class="header">
-            <div class="brand"><img src="tupele.png" alt="Tupelītes logo"></div>
-            <div class="nav">global nav</div>
+            <div class="brand"><img src="logo.png" alt="Tupelīšu hospitāļa logo"></div>
+            <div class="nav navigacija">
+                            <ol>
+                                <li>Par mums</a></li>
+                                <li>Pakalpojumi</a></li>
+                                <li>Kontakti</li>
+                            </ol>
+            </div>
             <div class="tools">tools</div>
         </header>
         <div class="hero">
-            <div class="hero-feature">hero feature</div>
-            <div class="hero-call-to-action">hero call to action</div>
+            <div class="hero-feature">
+                <div class="hero-text">VAJAG JAUNUS ZĀBACIŅUS?</div>
+        </div>
+            <div class="hero-call-to-action">
+                <button>Piesakies ciemos!</button>
+            </div>
         </div>
         <div class="body">
-            <div class="article-features">article feature</div>
-            <div class="inner-advert"></div>
+            <div class="article-features">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Dolorum provident ut eos adipisci, sapiente sed, nihil voluptates rem, repudiandae
+                  rerum voluptatum magni illum praesentium dignissimos ratione autem reprehenderit 
+                  consectetur ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                  Maiores vitae odio pariatur nesciunt sapiente impedit quo, repellat molestias atque ipsam nam.
+                   Eveniet beatae ad ea perspiciatis iure. Accusamus, laborum cumque. Lorem, ipsum dolor sit amet consectetur 
+                   adipisicing elit. Odio tempore eius nam soluta labore ipsam ea deleniti laboriosam quo quos eos cum accusantium
+                    consequuntur alias repudiandae, illum error distinctio quod.</div>
+            <div class="inner-advert"><img src="reklama.png" alt="tupeļsmēra reklāma"></div>
             <div class="article-listing">article listing</div>
         </div>
-        <div class="advert"><img src="zabaki.jpg" alt="zābaku reklāma" width="220px"></div>
+        <div class="advert"><img src="reklama.png" alt="tupeļsmēra reklāma"></div>
         <div class="sidebar">sidebar</div>
         <footer class="footer">footer</footer>
 </body>
