--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <body class="container">
         <header class="header">
             <div class="brand"><img src="logo.png" alt="Tupelīšu hospitāļa logo"></div>
-            <div class="nav navigacija">
-                            <ol>
-                                <li>Par mums</a></li>
-                                <li>Pakalpojumi</a></li>
-                                <li>Kontakti</li>
+            <div class="nav">
+                            <nav class="navigacija">
+                            <ul style="list-style: none;">
+                                <li><a href="#">Par mums</a></li>
+                                <li><a href="#">Pakalpojumi</a></li>
+                                <li><a href="#">Kontakti</a></li>
                             </ol>
+                        </nav>
             </div>
-            <div class="tools">tools</div>
+            <div class="tools"><img src="ikonas.png" alt="ikonas" width="50%"></div>
         </header>
         <div class="hero">
             <div class="hero-feature">
@@ -30,16 +32,27 @@
             </div>
         </div>
         <div class="body">
-            <div class="article-features">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 Dolorum provident ut eos adipisci, sapiente sed, nihil voluptates rem, repudiandae
-                  rerum voluptatum magni illum praesentium dignissimos ratione autem reprehenderit 
-                  consectetur ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                  Maiores vitae odio pariatur nesciunt sapiente impedit quo, repellat molestias atque ipsam nam.
-                   Eveniet beatae ad ea perspiciatis iure. Accusamus, laborum cumque. Lorem, ipsum dolor sit amet consectetur 
-                   adipisicing elit. Odio tempore eius nam soluta labore ipsam ea deleniti laboriosam quo quos eos cum accusantium
-                    consequuntur alias repudiandae, illum error distinctio quod.</div>
+            <div class="article-features">
+                <h2>Apavu kopšana</h2>
+                <p>Ielas apaviem ir nepieciešama regulāra kopšana gluži tāpat kā sejas un roku ādai.
+                 Tie katru vakaru ir jānotīra, jāizžāvē, jāpabaro, kā arī ik pa laikam jānoklāj 
+                 ar speciāliem aizsardzības līdzekļiem. Ja ievēro šos vienkāršos apavu kopšanas noteikumus, 
+                 tie kalpos ne vienu sezonu vien. <br>
+                Avots: <a href="http://www.la.lv/ka-pareizi-kopt-apavus">www.la.lv</a></p>
+                </div>
             <div class="inner-advert"><img src="reklama.png" alt="tupeļsmēra reklāma"></div>
-            <div class="article-listing">article listing</div>
+            <div class="article-listing">
+                <h2>Jaunumi</h2>
+                <ul class = "liste" style="list-style: none;">
+                    <li>Kā izvēlēties pareizos apavus?</li>
+                    <li>Ādas vai ekoādas kurpes - ko izvēlēties</li>
+                    <li>Kāpēc izgatavot apavus pēc individuāla pasūtījuma</li>
+                    <li>Kāpēc saraujas gumijas zābaki?</li>
+                    <li>Kur iegādāties ekoloģiskus apavu kopšanas līdzekļus?</li>
+                    <li>Trīs dienas bez apaviem: klientu pieredze</li>
+                    <li>Ko iesākt ar apaviem, ja pēdas skārusi sēnīte</li>
+                </ul>
+            </div>
         </div>
         <div class="advert"><img src="reklama.png" alt="tupeļsmēra reklāma"></div>
         <div class="sidebar">sidebar</div>
