--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
         </div>
         <div class="advert"><img src="reklama.png" alt="tupeļsmēra reklāma"></div>
         <div class="sidebar">sidebar</div>
-        <footer class="footer">footer</footer>
+        <footer class="footer">
+            <div class="contacts">
+                <pre>
+                    Kontakti:
+                    IU Tupelīšu Hospitālis
+                    Tupeļu iela 1a,
+                    Rīga 
+                    LV-1111
+                </pre>
+            </div class="copyrights"> 
+            <div>
+                    <pre>&copy; 2019</pre>
+            </div>
+        </footer>
 </body>
 </html>
