--- a/index.html
+++ b/index.html
@@ -34,41 +34,50 @@
         <div class="body">
             <div class="article-features">
                 <h2>Apavu kopšana</h2>
-                <p>Ielas apaviem ir nepieciešama regulāra kopšana gluži tāpat kā sejas un roku ādai.
-                 Tie katru vakaru ir jānotīra, jāizžāvē, jāpabaro, kā arī ik pa laikam jānoklāj 
-                 ar speciāliem aizsardzības līdzekļiem. Ja ievēro šos vienkāršos apavu kopšanas noteikumus, 
-                 tie kalpos ne vienu sezonu vien. <br>
-                Avots: <a href="http://www.la.lv/ka-pareizi-kopt-apavus">www.la.lv</a></p>
+                    <p>Ielas apaviem ir nepieciešama regulāra kopšana gluži tāpat kā sejas un roku ādai.
+                     Tie katru vakaru ir jānotīra, jāizžāvē, jāpabaro, kā arī ik pa laikam jānoklāj 
+                     ar speciāliem aizsardzības līdzekļiem. Ja ievēro šos vienkāršos apavu kopšanas noteikumus, 
+                     tie kalpos ne vienu sezonu vien. <br>
+                    Avots: <a href="http://www.la.lv/ka-pareizi-kopt-apavus">www.la.lv</a></p>
                 </div>
             <div class="inner-advert"><img src="reklama.png" alt="tupeļsmēra reklāma"></div>
-            <div class="article-listing">
-                <h2>Jaunumi</h2>
-                <ul class = "liste" style="list-style: none;">
-                    <li>Kā izvēlēties pareizos apavus?</li>
-                    <li>Ādas vai ekoādas kurpes - ko izvēlēties</li>
-                    <li>Kāpēc izgatavot apavus pēc individuāla pasūtījuma</li>
-                    <li>Kāpēc saraujas gumijas zābaki?</li>
-                    <li>Kur iegādāties ekoloģiskus apavu kopšanas līdzekļus?</li>
-                    <li>Trīs dienas bez apaviem: klientu pieredze</li>
-                    <li>Ko iesākt ar apaviem, ja pēdas skārusi sēnīte</li>
-                </ul>
+            <div class="article-listing"> 
+                <h2>Par mums</h2>
+                    <p>Uzņēmums "Tupelīšu Hospitālis" nodarbojas ar apavu labošanu un jaunu apavu 
+                        izgatavošanu pēc pasūtījuma. Esam izgatavojuši 300 skaistus un ērtus apavu pārus,
+                         kā arī pagarinājuši dzīvi daudzām jau padzīvojušām tupelēm un zābaciņiem. Laipni
+                         lūgti pie mums ciemos, paskatīsimies, papētīsim,salabosim vai izgatavosim tieši Jums 
+                         piemērotus apavus ikvienai dzīves situācijai. </p>
+                    </p>
+            </div>
             </div>
         </div>
         <div class="advert"><img src="reklama.png" alt="tupeļsmēra reklāma"></div>
-        <div class="sidebar">sidebar</div>
-        <footer class="footer">
-            <div class="contacts">
-                <pre>
-                    Kontakti:
-                    IU Tupelīšu Hospitālis
-                    Tupeļu iela 1a,
-                    Rīga 
-                    LV-1111
-                </pre>
-            </div class="copyrights"> 
+        <div class="sidebar">
+               <h2>Aktuāli</h2>
+                <ul class = "liste" style="list-style: none;">
+                    <li>Pareizo apavu izvēle</li>
+                    <li>Ādas vai ekoādas kurpes?</li>
+                    <li>Apavi pēc individuāla pasūtījuma</li>
+                    <li>Kāpēc saraujas gumijas zābaki?</li>
+                    <li>Ekoloģiski apavu kopšanas līdzekļi</li>
+                    <li>Trīs dienas bez apaviem</li>
+                    <li>Baisā pēdu sēnīte </li>
+                </ul>
+        </div>
+    <footer class="footer">
             <div>
-                    <pre>&copy; 2019</pre>
+                <pre>&copy; 2019 Tupelīšu Hospitālis</pre>
+            </div> 
+            <div>
+             <pre>
+                Kontakti:
+                IU Tupelīšu Hospitālis
+                Tupeļu iela 1a,
+                Rīga 
+                LV-1111
+             </pre> 
             </div>
-        </footer>
+    </footer>
 </body>
 </html>
