--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="brand"><img src="logo.png" alt="Tupelīšu hospitāļa logo"></div>
             <div class="nav">
                             <nav class="navigacija">
-                            <ul style="list-style: none;">
+                            <ol style="list-style: none;">
                                 <li><a href="#">Par mums</a></li>
                                 <li><a href="#">Pakalpojumi</a></li>
                                 <li><a href="#">Kontakti</a></li>
